--- a/.github/workflows/publish-to-docker.yml
+++ b/.github/workflows/publish-to-docker.yml
@@ -27,4 +27,5 @@ jobs:
         with:
           push: true
           tags: godwin42sh/krampncf:latest
-          context: ./Back
+          context: Back/
+          file: ./Dockerfile
