fix: hopefully fixing ga action

--- a/.github/workflows/publish-to-docker.yml
+++ b/.github/workflows/publish-to-docker.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
@@ -27,5 +30,4 @@ jobs:
         with:
           push: true
           tags: godwin42sh/krampncf:latest
-          context: Back/
-          file: ./Dockerfile
+          context: ./Back
