--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -3,7 +3,7 @@ FROM node:lts-alpine
 WORKDIR /home/node/app
 
 COPY package*.json ./
-RUN npm install --only=prod
+RUN npm install
 
 COPY ./src ./src
 COPY tsconfig.json ./
