--- a/Back/package.json
+++ b/Back/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "eslint": "^8.54.0",
