feat: add implementation of gtfsrt api to support realtime schedule of TER

--- a/Back/.eslintrc.json
+++ b/Back/.eslintrc.json
@@ -15,5 +15,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "brace-style": "off",
+        "@typescript-eslint/brace-style": "error"
     }
 }
