--- a/Back/package.json
+++ b/Back/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gtfs-realtime-bindings": "^1.1.1",
     "ioredis": "^5.3.2",
     "nodemon": "^3.0.1"
   },
