--- a/Back/package.json
+++ b/Back/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gtfs-realtime-bindings": "^1.1.1",
