--- a/Back/package.json
+++ b/Back/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "gtfs-realtime-bindings": "^1.1.1",
     "ioredis": "^5.3.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "query-string": "7.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
