--- a/Back/tsconfig.json
+++ b/Back/tsconfig.json
@@ -8,5 +8,6 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "outDir": "./dist",                                  /* Redirect output structure to the directory. */
+    "baseUrl": ".",
   }
 }
