--- a/Back/package.json
+++ b/Back/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "gtfs-realtime-bindings": "^1.1.1",
     "ioredis": "^5.3.2",
+    "node-html-parser": "^6.1.13",
     "nodemon": "^3.0.1",
     "query-string": "7.1.1"
   },
