--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -3,7 +3,7 @@ FROM node:lts-alpine
 WORKDIR /home/node/app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --only=production
 
 COPY ./src ./src
 COPY tsconfig.json ./
@@ -11,9 +11,5 @@ COPY tsconfig.json ./
 RUN npm run build
 
 ENV TZ="Europe/Paris"
-
-ENV REDIS_URL=""
-ENV SNCF_API_URL=""
-ENV SNCF_API_KEY=""
 
 CMD [ "npm", "run", "start" ]
