--- a/Back/package.json
+++ b/Back/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   }
 }
