--- a/Back/package.json
+++ b/Back/package.json
@@ -4,35 +4,37 @@
   "description": "",
   "main": "dist/src/app.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "build": "tsc",
-    "dev": "nodemon src/app.ts",
+    "start": "bun run dist/app.js",
+    "build": "bun run tsc",
+    "dev": "bun src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.9.0",
     "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "date-fns-tz": "^2.0.1",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "gtfs-realtime-bindings": "^1.1.1",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.6.1",
     "node-html-parser": "^6.1.13",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.10",
     "query-string": "7.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "eslint": "^8.54.0",
+    "@types/express": "^4.17.23",
+    "@types/node": "^20.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.57.1",
     "eslint-config-standard-with-typescript": "^40.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.2"
-  }
+    "typescript": "^5.8.3",
+    "@types/bun": "latest"
+  },
+  "private": true
 }
